fix horizontal scroll issue

--- a/css/makemepretty.css
+++ b/css/makemepretty.css
@@ -753,10 +753,8 @@ audio:active, audio:focus {
 
 /*root rocket*/
 #fullVideo {
-    max-width: 101%;
+    max-width: 100%;
     min-height: 100%;
-    margin: 0 -.5% 0 -.5%;
-    min-width: 101%;
 }
 
 #fullVideoCover {
